test/corpus/identifiers.txt
==================
Leading underscore identifier
==================

auto _x = 1

---

(source_file
  (declaration
    (auto_declaration
      name: (identifier)
      value: (expression
        (logic_or_expression
          (logic_and_expression
            (equality_expression
              (comparison_expression
                (sum_expression
                  (product_expression
                    (power_expression
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (literal
                              (int_literal))))))))))))))))

==================
Leading underscore then digits
==================

auto _123 = 1

---

(source_file
  (declaration
    (auto_declaration
      name: (identifier)
      value: (expression
        (logic_or_expression
          (logic_and_expression
            (equality_expression
              (comparison_expression
                (sum_expression
                  (product_expression
                    (power_expression
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (literal
                              (int_literal))))))))))))))))

==================
Underscores only
==================

auto __ = 1

---

(source_file
  (declaration
    (auto_declaration
      name: (identifier)
      value: (expression
        (logic_or_expression
          (logic_and_expression
            (equality_expression
              (comparison_expression
                (sum_expression
                  (product_expression
                    (power_expression
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (literal
                              (int_literal))))))))))))))))

==================
Bare underscore stays the parameter marker
==================

func f(int _) returns void { return }

---

(source_file
  (declaration
    (function_declaration
      name: (identifier)
      (param_list
        (parameter
          type: (type_name
            (type_path
              (identifier)))
          name: (underscore)))
      return_type: (type_name
        (type_path
          (identifier)))
      (block
        (statement
          (return_statement))))))

==================
Bare underscore stays the match wildcard
==================

func f(int n) returns void {
    match n {
        _ { return }
    }
}

---

(source_file
  (declaration
    (function_declaration
      name: (identifier)
      (param_list
        (parameter
          type: (type_name
            (type_path
              (identifier)))
          name: (identifier)))
      return_type: (type_name
        (type_path
          (identifier)))
      (block
        (statement
          (match_statement
            value: (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (sum_expression
                        (product_expression
                          (power_expression
                            (unary_expression
                              (postfix_expression
                                (primary_expression
                                  (identifier))))))))))))
            (match_arm
              pattern: (pattern
                (wildcard_pattern
                  (underscore)))
              (block
                (statement
                  (return_statement))))))))))
